--- a/style.css
+++ b/style.css
@@ -4,47 +4,58 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+
+.header__img {
     width: 100%;
 }
-.aaa .more_inf {
+
+.header__more_inf {
     font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+    .header {
+        text-align: center;
+    }
 }
-}
-.centered-main-page-element {
+
+.main__page_element {
     display: block;
     width: 500px;
     margin: 0 auto 0;
 }
+
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
+
 .task-row-wrapper {
     display: flex;
 }
-ul {
-    margin:0;
-    padding: 0px;
+
+.ul-list {
+    margin: 0;
+    padding: 0;
 }
-li, h3 {
-    list-style:none;
+
+.ul-list-item {
+    list-style: none;
 }
-input,button{
-    outline:none;
+
+input {
+    outline: none;
 }
-button {
+
+.btn {
     background: none;
     border: 0px;
     color: #888;
@@ -53,9 +64,11 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
+
 button:hover {
     color: #3a3A3a;
 }
+
 /* Heading */
 h3,
 label[for='new-task'] {
@@ -67,6 +80,7 @@ label[for='new-task'] {
     margin: 0;
     text-transform: uppercase;
 }
+
 input[type="text"] {
     margin: 0;
     font-size: 18px;
@@ -79,6 +93,7 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
+
 input[type="text"]:focus {
     color: #333;
 }
@@ -88,7 +103,8 @@ label[for='new-task'] {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+
+#new-task {
     width: 318px;
 }
 
@@ -102,47 +118,50 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+
+li {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+input[type="checkbox"] {
     margin: 0 10px;
 }
-li > label {
+.task {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+
+li>input[type="text"] {
     width: 226px
 }
-button.delete img {
+
+.delete img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
-    text-decoration: line-through
+#completed-tasks label {
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
-    display:none
+.ul-list-item input[type=text] {
+    display: none
 }
 
-ul li.editMode input[type=text] {
-    display:inline-block;
-    width:224px
+.editMode input[type=text] {
+    display: inline-block;
+    width: 224px
 }
 
-ul li.editMode label {
-    display:none;
+.editMode label {
+    display: none;
 }
